added authservice api
