# api/swagger.yaml
@@ -19,6 +19,7 @@ tags:
   description: "lookup lists and their information"
 - name: "suggestions"
   description: "retrieve suggestions based on content"
+- name: "serviceauth"
 schemes:
 - "http"
 - "https"
@@ -70,7 +71,7 @@ paths:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/inline_response_200"
+            $ref: "#/definitions/Response_Token"
           headers:
             X-Rate-Limit:
               type: "integer"
@@ -289,6 +290,29 @@ paths:
       security:
       - Bearer: []
       x-swagger-router-controller: "Suggestions"
+  /serviceauth/{servicekey}:
+    get:
+      tags:
+      - "serviceauth"
+      summary: "Authenticate a service"
+      operationId: "authService"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "servicekey"
+        in: "path"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Response_Token"
+        default:
+          description: "failed operation"
+          schema:
+            $ref: "#/definitions/Response_API"
+      x-swagger-router-controller: "Serviceauth"
 securityDefinitions:
   Bearer:
     description: "Bearer web token - Bearer"
@@ -452,7 +476,7 @@ definitions:
       userSuggestionId: 0
       suggestionId: 6
       userId: 1
-  inline_response_200:
+  Response_Token:
     properties:
       token:
         type: "string"
